Add feijoada image to the recipe page

--- a/recipes/feijoada.html
+++ b/recipes/feijoada.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Feijoada Recipe</h1>
+        <img src="https://www.allrecipes.com/thmb/c1mrdGxcN5fERCfzV4j0-XU7Nq0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/AR-139208-Feijoada-DDMFS-4x3-74a3fbca83d947f9b6f330ef01999c89.jpg" alt="Brazilian Feijoada">
         <h2>This feijoada recipe is my version of a traditional Brazilian black bean stew that maintains the rich smoky, flavors famous in Brazil. Additional meats, including sausage, may be added if desired. This is excellent served over brown rice.</h2>
         <h3>Ingredients</h3>
         <ul>
