Add link to chicken arroz caldo in index file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Odin Recipes</h1>
     <a href="./recipes/lasagna.html">Lasagna</a>
     <a href="./recipes/feijoada.html">Feijoada</a>
+    <a href="./recipes/chicken-arroz-caldo.html">Chicken Arroz Caldo</a>
 </body>
 </html>
