--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <a href="./recipes/feijoada.html">Feijoada</a>
-    <a href="./recipes/chicken-arroz-caldo.html">Chicken Arroz Caldo</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/feijoada.html">Feijoada</a></li>
+        <li><a href="./recipes/chicken-arroz-caldo.html">Chicken Arroz Caldo</a></li>
+    </ul>
 </body>
 </html>
